; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/stlport/src/c_locale_glibc/extr_c_locale_glibc2.c__Locale_codecvt_create.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/stlport/src/c_locale_glibc/extr_c_locale_glibc2.c__Locale_codecvt_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._Locale_codecvt = type { i32 }
%struct._Locale_name_hint = type { i32 }

@_STLP_LOC_NO_PLATFORM_SUPPORT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct._Locale_codecvt* @_Locale_codecvt_create(i8* %0, %struct._Locale_name_hint* %1, i32* %2) #0 {
  %4 = alloca %struct._Locale_codecvt*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct._Locale_name_hint*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store %struct._Locale_name_hint* %1, %struct._Locale_name_hint** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 0
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp eq i32 %11, 67
  br i1 %12, label %13, label %20

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 1
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  store %struct._Locale_codecvt* inttoptr (i64 1 to %struct._Locale_codecvt*), %struct._Locale_codecvt** %4, align 8
  br label %23

20:                                               ; preds = %13, %3
  %21 = load i32, i32* @_STLP_LOC_NO_PLATFORM_SUPPORT, align 4
  %22 = load i32*, i32** %7, align 8
  store i32 %21, i32* %22, align 4
  store %struct._Locale_codecvt* null, %struct._Locale_codecvt** %4, align 8
  br label %23

23:                                               ; preds = %20, %19
  %24 = load %struct._Locale_codecvt*, %struct._Locale_codecvt** %4, align 8
  ret %struct._Locale_codecvt* %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
